# fp-homework

./: stack.yaml
hw1/: hw1.cabal
hw1/src/: Task11.hs  Task12.hs
hw1/test/: Task11Test.hs  Task12Test.hs
hw2/app/: Main.hs
