name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src, test
  exposed-modules:     Task11
                     , Task11Test
                     , Task12
                     , Task12Test
  exposed-modules:     Spec
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  build-depends: tasty
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      hw1
    , base ==4.*
    , hspec ==2.*
  other-modules:
      Task11Test
      Task12Test
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
